# opa-project

./: .env.example  AGENTS.md  MANIFEST.md  README.md  pyproject.toml
docs/: API_COMPATIBILITY.md  API_SCHEMA.md  ARCHITECTURE.md  BROWSER_LIVE_DEMO.md  CONFIGURATION.md  CPU_BENCHMARKS.md  DECISIONS.md  LIMITATIONS.md  MODEL_CARD.md  PROJECT_STATE.md  RELEASE_CRITERIA.md  REMEDIATION_MATRIX.md  REVIEWS.md  ROADMAP.md  SECURITY_MODEL.md  TESTING.md  WORK_ORDERS.md
src/yolo_openai_api/: __init__.py  auth.py  config.py  errors.py  main.py  model_registry.py
src/yolo_openai_api/routes/: models.py
tests/: test_auth.py  test_config.py  test_errors.py  test_health.py  test_models_endpoint.py
