[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-compatible-yolo11-coco-detection-api"
version = "0.1.0"
description = "CPU-only FastAPI scaffold for an OpenAI-compatible YOLO11 COCO detection API."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
